# rfal-sys

./: .gitignore  .gitmodules  Cargo.toml  README.md  build.rs  flake.nix  rfal_features.h  rfal_platform.h  rust-toolchain.toml  shell.nix
.cargo/: config.toml
.reuse/: dep5
LICENSES/: LicenseRef-ST.txt
RFAL/include/: rfal_nfc.h  rfal_rf.h  rfal_utils.h
RFAL/source/: rfal_analogConfig.c  rfal_isoDep.c  rfal_nfc.c  rfal_nfcDep.c  rfal_nfca.c  rfal_nfcb.c  rfal_nfcf.c  rfal_nfcv.c  rfal_st25tb.c  rfal_t1t.c  (+2 more)
rfal-sys/: Cargo.toml  build.rs
rfal-sys/ST25NFC_Embedded_Lib_ST25R95_1.7.0/: LICENSES.txt
rfal-sys/ST25NFC_Embedded_Lib_ST25R95_1.7.0/Middlewares/ST/RFAL/include/: rfal_isoDep.h  rfal_rf.h  rfal_utils.h
rfal-sys/ST25NFC_Embedded_Lib_ST25R95_1.7.0/Middlewares/ST/RFAL/source/: rfal_analogConfig.c  rfal_iso15693_2.c  rfal_isoDep.c  rfal_nfc.c  rfal_nfcDep.c  rfal_nfca.c  rfal_nfcb.c  rfal_nfcf.c  rfal_nfcv.c  rfal_st25tb.c  rfal_st25xv.c  rfal_t1t.c  rfal_t2t.c  rfal_t4t.c
rfal-sys/ST25NFC_Embedded_Lib_ST25R95_1.7.0/Middlewares/ST/RFAL/source/st25r95/: rfal_analogConfigTbl.h  rfal_features.h  rfal_rfst25r95.c  st25r95.c  st25r95.h  st25r95_com.c  st25r95_com.h  st25r95_com_spi.c  st25r95_com_uart.c
rfal-sys/patches/: 0001_localize_string_h.patch  0002_globalize_ST25R95_DEBUG.patch  0003_big_spi_xfers.patch  0004_efficient_wait.patch  0005_nfc_a_only.patch  0006_optimize_reg_modify.patch  0007_optimize_flush.patch  9999_card_emulation.patch
rfal-sys/src/: platform.rs  rfal_platform.h
src/: discover.rs  error.rs  lib.rs  ndef.rs  nfc.rs  platform.rs
(+7 files in other folders)
