# SPDX-FileCopyrightText: 2024 Foundation Devices, Inc. <hello@foundation.xyz>
# SPDX-License-Identifier: GPL-3.0-or-later

[package]
name = "rfal"
version = "1.0.0"
edition = "2021"
description = """
Bindings to STSW-ST25R017 library for interacting with ST25R95 NFC chip.
"""

[dependencies]
rfal-sys = { path = "rfal-sys", version = "1.0.1" }

[target.'cfg(not(feature = "alloc"))'.dependencies]
heapless = { version = "0.8" }

[features]
alloc = []
default = ["alloc"]
