[package]
name = "rfal-sys"
version = "3.0.0+1.7.0"
edition = "2021"
description = """
Native bindings to STSW-ST25R017 v1.7.0 library from ST.
Including:
- RFAL v3.0.0 ST Middleware
- NDEF ST Middleware
- st25r_common ST Middleware (just some header files)
"""

[dependencies]
cty = "0.2.2"

[build-dependencies]
cc = "1.1.15"
bindgen = { version = "0.70.1", default-features = false }

[profile.release]
debug = true
